# openclaw-tracer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_ZH.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: models.full.example.json
docs/: PYTHON_SCRIPTS.md  USAGE.md
docs/plans/: 2026-03-04-docker-design.md  2026-03-04-docker-implementation.md
openclaw_tracer/: __init__.py  cli.py
openclaw_tracer/exporter/: __init__.py  base.py  hf_format.py  trl_format.py
openclaw_tracer/proxy/: __init__.py  llm_proxy.py
openclaw_tracer/storage/: __init__.py  base.py  parquet_store.py
openclaw_tracer/types/: __init__.py  core.py
scripts/: analyze_logs.py  build-docker.sh  docker-entrypoint.sh  export.py  push-docker.sh  serve.py  show_file.py  show_spans.py  show_stats.py
tests/: __init__.py  conftest.py  test_core.py  test_integration.py  test_parquet_store.py
