[project]
name = "openclaw-tracer"
version = "0.1.2"
description = "LLM data collection tool for SFT and RL training using LiteLLM proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm[proxy]>=1.74.0",
    "pydantic>=2.11.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.38.0",
    "pyarrow>=18.0.0",
    "pandas>=2.2.0",
    "datasets>=3.0.0",
    "trl>=0.14.0",
    "transformers>=4.55.0",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "aiohttp>=3.11.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
openclaw-tracer = "openclaw_tracer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openclaw_tracer"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
